.workspace-data/cache/repo-33e59f1f5d53b03b/crates/next-custom-transforms/tests/errors/server-actions/server-graph/30/input.js
'use client'
'use cache'

export async function foo() {}
